# OpenGL

./: .gitignore  CMakeLists.txt  main.cpp
00_settingUpOpengl/: CMakeLists.txt  main.cpp  readme.md
00_settingUpOpengl/include/: readme.md
01_writingShader/: CMakeLists.txt  main.cpp  readme.md
02_dealWithShader/: CMakeLists.txt  main.cpp  readme.md
02_dealWithShader/res/shaders/: Basic.shader
03_indexBuffers/: CMakeLists.txt  main.cpp  readme.md
04_errors/: CMakeLists.txt  main.cpp  readme.md
04_errors/res/shaders/: Basic.shader
05_uniforms/: CMakeLists.txt  main.cpp  readme.md
05_uniforms/res/shaders/: Basic.shader
06_vertexArrays/: CMakeLists.txt  main.cpp  readme.md
day00/: CMakeLists.txt
day01/: main.cpp  readme.md
day02/: main.cpp
